part-2/project-v-1/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-v-1
  namespace: dwk-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-v-1
  template:
    metadata:
      labels:
        app: project-v-1
    spec:
      volumes:
        - name: project-volume
          persistentVolumeClaim:
            claimName: project-claim
      containers:
        - name: project-v-1
          image: glassb3ad/project-v-1:1.6
          volumeMounts:
            - name: project-volume
              mountPath: /usr/src/app/files
