part-2/project-v-1/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-v-1
  namespace: dwk-project
spec:
  type: ClusterIP
  selector:
    app: project-v-1
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3002
