part-2/project-v-1/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dwk-material-ingress
spec:
  rules:
    - http:
        paths:
          - path: /tasks
            pathType: Prefix
            backend:
              service:
                name: todo-backend
                port:
                  number: 2346
          - path: /
            pathType: Prefix
            backend:
              service:
                name: project-v-1
                port:
                  number: 2345
